; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/librtmp/extr_rtmp.c_RTMP_GetTime.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/librtmp/extr_rtmp.c_RTMP_GetTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tms = type { i32 }

@clk_tck = common dso_local global i32 0, align 4
@_SC_CLK_TCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RTMP_GetTime() #0 {
  %1 = alloca %struct.tms, align 4
  %2 = load i32, i32* @clk_tck, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @_SC_CLK_TCK, align 4
  %6 = call i32 @sysconf(i32 %5)
  store i32 %6, i32* @clk_tck, align 4
  br label %7

7:                                                ; preds = %4, %0
  %8 = call i32 @times(%struct.tms* %1)
  %9 = mul nsw i32 %8, 1000
  %10 = load i32, i32* @clk_tck, align 4
  %11 = sdiv i32 %9, %10
  ret i32 %11
}

declare dso_local i32 @sysconf(i32) #1

declare dso_local i32 @times(%struct.tms*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
